# PLACOGAVIKI

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  dotenv.rs  gamepad.rs  input.rs  main.rs  stats.rs
src/service/: mod.rs
src/service/discord/: mod.rs
src/service/kick/: chatrooms.rs  message.rs  mod.rs
src/service/youtube/: channels.rs  mod.rs
