[package]
name = "placogaviki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.72"
colored = "2.0.0"
dotenv = "0.15.0"
json = "0.12.4"
lazy_static = "1.4.0"
rayon = "1.7.0"
serenity = { version = "0.11.6", default-features = false, features = ["builder", "client", "gateway", "http", "model", "tokio", "rustls_backend"] }
tokio = { version = "1.26.0", features = ["full"] }
vigem-client = "0.1.4"
websocket = "0.26.5"
